# PARAS

./: README.md
ERMiner/: AlgoERMiner.cpp  CMakeCache.txt  CMakeLists.txt  ERMiner  ExpandLeftStore.h  LeftEquivalenceClass.h  LeftRule.h  Makefile  Occurence.h  RightEquivalenceClass.h  RightRule.cpp  RightRule.h  Sequence.h  SequenceDatabase.h  SparseMatrix.cpp  cmake_install.cmake  output.txt
PARAS/: LICENSE  NOTICE  README.md  _DS_Store  desktop.ini
PARAS/Data/: T10.psi  adult..psi  adult.csv  adult.psi  bank-full.psi  bank.csv  bank.psi  breast-cancer.psi  chess.psi  languages.csv  languages.psi  mushroom-output-03506.txt  mushroom-output-03506_mapped.txt  mushroom.psi  mushroom_original.psi  primary-tumor.csv  shuttle-landing-control.csv  testingData.csv  testingData.psi  testingDataNew.psi
PARAS/ERMiner/: AlgoERMiner.h  CMakeCache.txt  ExpandLeftStore.cpp  LeftEquivalenceClass.cpp  LeftRule.cpp  Makefile  Occurence.cpp  RightEquivalenceClass.cpp  Sequence.cpp  SequenceDatabase.cpp  SparseMatrix.h  cmake_install.cmake  main.cpp
PARAS/PARAS/: Makefile  Makefile.Debug  Makefile.Release  PARAS.pro  PARAS.pro.user.04090b3.xml  PARAS.pro.user.18  PARAS.pro.user.2.7pre1  PARAS.pro.user.20  PARAS.pro.user.3.0-pre1  PARAS.pro.user.3.2-pre1  PARAS.pro.user.4.9-pre1  PARAS.pro.user.aff09fe.xml  _DS_Store  readme.txt
PARAS/build-PARAS-Desktop_Qt_5_0_2_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  _DS_Store
PARAS/build-PARAS-Desktop_Qt_5_12_1_clang_64bit-Debug/: Makefile  moc_ColorSelector.cpp  moc_CreateIndexDialog.cpp  moc_CreateIndexPreview.cpp  (+13 more)
(+214 files in other folders)
